Fix ppmm bug